--- a/plugin/src/main/resources/GUI/META-INF/resources/composites/corporate.xhtml
+++ b/plugin/src/main/resources/GUI/META-INF/resources/composites/corporate.xhtml
@@ -1,15 +1,15 @@
-<ui:composition xmlns="http://www.w3.org/1999/xhtml"
+<ui:composition
+    xmlns="http://www.w3.org/1999/xhtml"
     xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
     xmlns:composite="http://xmlns.jcp.org/jsf/composite"
     xmlns:h="http://xmlns.jcp.org/jsf/html"
     xmlns:f="http://xmlns.jcp.org/jsf/core"
     xmlns:c="http://java.sun.com/jsp/jstl/core"
     xmlns:x="http://myfaces.apache.org/tomahawk"
-    xmlns:pt="http://xmlns.jcp.org/jsf/passthrough"
-    >
+    xmlns:pt="http://xmlns.jcp.org/jsf/passthrough">
 
     <composite:interface>
-    
+
         <composite:attribute name="identifier" />
         <!-- #{field.label} -->
         <composite:attribute name="labelText" />
@@ -20,13 +20,13 @@
         <!-- #{field.value} -->
         <composite:attribute name="value" />
         <!-- #{field.role} -->
-        <composite:attribute name="role" />        
+        <composite:attribute name="role" />
         <!-- #{field.validationError} -->
         <composite:attribute name="showErrorMessage" default="false" />
         <!-- #{field.validationErrorMessage} -->
-        <composite:attribute name="errorMessageText"  />
+        <composite:attribute name="errorMessageText" />
         <!-- #{field.selectItemList} -->
-        <composite:attribute name="selectItems"  />
+        <composite:attribute name="selectItems" />
 
         <!-- #{field.helpMessage} ? -->
         <composite:attribute name="placeholderText" default="" />
@@ -43,7 +43,9 @@
             styleClass="form-group grid-row #{cc.attrs.mainClass}">
             <label for="#{cc.attrs.identifier}_input">
                 #{cc.attrs.labelText}
-                <h:panelGroup styleClass="input-required" rendered="#{cc.attrs.fieldRequired}">
+                <h:panelGroup
+                    styleClass="input-required"
+                    rendered="#{cc.attrs.fieldRequired}">
                     <i class="fa fa-asterisk" />
                 </h:panelGroup>
                 <ui:include src="../uii/includes/icon-help.xhtml">
