--- a/plugin/src/main/resources/GUI/META-INF/resources/composites/person.xhtml
+++ b/plugin/src/main/resources/GUI/META-INF/resources/composites/person.xhtml
@@ -6,10 +6,9 @@
     xmlns:c="http://java.sun.com/jsp/jstl/core"
     xmlns:x="http://myfaces.apache.org/tomahawk"
     xmlns:pt="http://xmlns.jcp.org/jsf/passthrough"
-    >
+    xmlns:jsf="http://xmlns.jcp.org/jsf">
 
     <composite:interface>
-    
         <composite:attribute name="identifier" />
         <!-- #{field.label} -->
         <composite:attribute name="labelText" />
@@ -29,9 +28,9 @@
         <composite:attribute name="errorMessageText"  />
         <!-- #{field.selectItemList} -->
         <composite:attribute name="selectItems"  />
-
         <!-- #{field.helpMessage} ? -->
         <composite:attribute name="placeholderText" default="" />
+        
         <!-- styling options -->
         <composite:attribute name="mainClass" default="" />
         <composite:attribute name="subClass" default="" />
@@ -94,7 +93,6 @@
                         execute="@this" />
                     <f:selectItems value="#{cc.attrs.selectItems}" />
                 </h:selectOneMenu>
-
 
                 <h:panelGroup
                     layout="block"
