--- a/plugin/src/main/resources/GUI/META-INF/resources/composites/label.xhtml
+++ b/plugin/src/main/resources/GUI/META-INF/resources/composites/label.xhtml
@@ -4,25 +4,27 @@
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:f="http://xmlns.jcp.org/jsf/core"
 	xmlns:c="http://java.sun.com/jsp/jstl/core"
-	xmlns:x="http://myfaces.apache.org/tomahawk">
+	xmlns:x="http://myfaces.apache.org/tomahawk"
+  xmlns:jsf="http://xmlns.jcp.org/jsf">
 
 	<composite:interface>
 		<composite:attribute name="labelFor" />
 		<composite:attribute name="labelText" />
 		<composite:attribute name="labelHelpText" />
+		<composite:attribute name="labelHelpText" />
+		<composite:attribute name="labelRequired" default="true" />
 	</composite:interface>
 
 	<composite:implementation>
 
 		<label for="#{cc.attrs.labelFor}">
 			#{cc.attrs.labelText}
+
 			<span
 				class="input-required">
 				<i class="fa fa-asterisk"/>
 			</span>
-			<ui:include src="../uii/includes/icon-help.xhtml">
-				<ui:param name="helpText" value="#{cc.attrs.labelHelpText}" />
-			</ui:include>
+
 		</label>
 
 	</composite:implementation>
