--- a/plugin/src/main/resources/GUI/META-INF/resources/composites/input.xhtml
+++ b/plugin/src/main/resources/GUI/META-INF/resources/composites/input.xhtml
@@ -15,6 +15,8 @@
 		<composite:attribute name="inputValue" />
 		<composite:attribute name="inputRequired" default="false" />
 		<composite:attribute name="inputPlaceholder" />
+		<composite:attribute name="inputDuplicate" default="false" />
+		<composite:attribute name="showHelpBtn" default="true" />
 		<composite:attribute name="helpText" default="Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua."/>
 	</composite:interface>
 
@@ -33,11 +35,12 @@
 
     </x:inputText>
 
+
 			<!-- ICONS -->
-			<div class="form-icons">
-				<ui:include src="/uii/includes/icon-plus.xhtml" />
-				<ui:include src="/uii/includes/icon-help.xhtml" />
-			</div>
+			<ui:include src="/uii/includes/form_icons.xhtml">
+				<ui:param name="duplicateElement" value="#{cc.attrs.inputDuplicate}" />
+				<ui:param name="showHelpBtn" value="#{cc.attrs.showHelpBtn}" />
+			</ui:include>
 
 			<div class="help-text vis-hidden">
 				#{cc.attrs.helpText}
