--- a/plugin/src/main/resources/GUI/META-INF/resources/uii/external_index.xhtml
+++ b/plugin/src/main/resources/GUI/META-INF/resources/uii/external_index.xhtml
@@ -6,7 +6,8 @@
     template="/uii/template/reduced_content_template.html"    
     xmlns:x="http://myfaces.apache.org/tomahawk"
     xmlns:intranda="http://xmlns.jcp.org/jsf/composite/composites"
-    xmlns:pt="http://xmlns.jcp.org/jsf/passthrough">
+    xmlns:pt="http://xmlns.jcp.org/jsf/passthrough"
+    xmlns:zlb="http://xmlns.jcp.org/jsf/composite/composites">
 
 <!--     template="/uii/templatePG/templatePG.html" -->
 
