--- a/plugin/src/main/resources/GUI/META-INF/resources/composites/picklist.xhtml
+++ b/plugin/src/main/resources/GUI/META-INF/resources/composites/picklist.xhtml
@@ -16,24 +16,36 @@
         <!-- #{field.helpMessage} -->
         <composite:attribute name="labelHelpText" />
         <!-- #{field.required} -->
-        <composite:attribute name="fieldRequired" default="false" />
+        <composite:attribute
+            name="fieldRequired"
+            default="false" />
         <!-- #{field.value} -->
         <composite:attribute name="value" />
         <!-- #{field.role} -->
         <composite:attribute name="role" />
         <!-- #{field.validationError} -->
-        <composite:attribute name="showErrorMessage" default="false" />
+        <composite:attribute
+            name="propertyValid"
+            default="true" />
         <!-- #{field.validationErrorMessage} -->
         <composite:attribute name="errorMessageText" />
         <!-- #{field.selectItemList} -->
         <composite:attribute name="selectItems" />
 
         <!-- #{field.helpMessage} ? -->
-        <composite:attribute name="placeholderText" default="" />
+        <composite:attribute
+            name="placeholderText"
+            default="" />
         <!-- styling options -->
-        <composite:attribute name="mainClass" default="" />
-        <composite:attribute name="subClass" default="" />
-        <composite:attribute name="fieldStyle" default="" />
+        <composite:attribute
+            name="mainClass"
+            default="" />
+        <composite:attribute
+            name="subClass"
+            default="" />
+        <composite:attribute
+            name="fieldStyle"
+            default="" />
     </composite:interface>
 
     <composite:implementation>
@@ -55,7 +67,7 @@
                 </ui:include>
             </label>
             <div class="form-field #{cc.attrs.subClass}">
-                
+
 
                 <h:selectOneMenu
                     id="#{cc.attrs.identifier}_select"
@@ -86,7 +98,7 @@
 
                 <h:panelGroup
                     layout="block"
-                    rendered="#{cc.attrs.showErrorMessage}"
+                    rendered="#{!cc.attrs.propertyValid}"
                     styleClass="font-danger validation-message">
                     <h:outputText value="#{cc.attrs.errorMessageText}" />
                 </h:panelGroup>
