--- a/plugin/src/main/resources/GUI/META-INF/resources/composites/field.xhtml
+++ b/plugin/src/main/resources/GUI/META-INF/resources/composites/field.xhtml
@@ -6,7 +6,8 @@
     xmlns:f="http://xmlns.jcp.org/jsf/core"
     xmlns:c="http://java.sun.com/jsp/jstl/core"
     xmlns:x="http://myfaces.apache.org/tomahawk"
-    xmlns:pt="http://xmlns.jcp.org/jsf/passthrough">
+    xmlns:pt="http://xmlns.jcp.org/jsf/passthrough"
+    xmlns:jsf="http://xmlns.jcp.org/jsf">
 
     <composite:interface>
         <composite:attribute name="identifier" />
@@ -51,7 +52,10 @@
         <composite:attribute
             name="fieldStyle"
             default="" />
-        <composite:attribute name="fieldListener" />
+            
+        <composite:attribute name="displayDuplicateButton" default="false" />
+        <composite:attribute name="render" default="@form" />
+
     </composite:interface>
 
     <composite:implementation>
@@ -80,7 +84,7 @@
                     styleClass="form-control #{cc.attrs.fieldStyle}"
                     value="#{cc.attrs.value}">
                     <f:ajax
-                        render="@form"
+                        render="#{cc.attrs.render}"
                         execute="@this" />
                     <f:passThroughAttribute
                         name="placeholder"
@@ -94,7 +98,7 @@
                     styleClass="form-control #{cc.attrs.fieldStyle}"
                     value="#{cc.attrs.value}">
                     <f:ajax
-                        render="@form"
+                        render="#{cc.attrs.render}"
                         execute="@this" />
                     <f:passThroughAttribute
                         name="placeholder"
@@ -110,7 +114,7 @@
                         itemValue="null"
                         itemLabel="#{msgs.bitteAuswaehlen}" />
                     <f:ajax
-                        render="@form"
+                        render="#{cc.attrs.render}"
                         execute="@this" />
                     <f:selectItems value="#{cc.attrs.selectItems}" />
                 </h:selectOneMenu>
@@ -121,7 +125,7 @@
                     styleClass="form-control"
                     value="#{cc.attrs.booleanValue}">
                     <f:ajax
-                        render="@form"
+                        render="#{cc.attrs.render}"
                         execute="@this" />
                 </h:selectBooleanCheckbox>
                 <h:selectOneRadio
@@ -130,7 +134,7 @@
                     styleClass="form-control"
                     value="#{cc.attrs.subValue}">
                     <f:ajax
-                        render="@form"
+                        render="#{cc.attrs.render}"
                         execute="@this" />
                     <f:selectItems value="#{cc.attrs.selectItems}" />
                 </h:selectOneRadio>
@@ -146,7 +150,16 @@
                     rendered="#{NavigationForm.showHelp}"
                     value="#{cc.attrs.labelHelpText}" />
             </div>
-
+            <h:panelGroup rendered="#{cc.attrs.displayDuplicateButton}">
+                <button
+                    jsf:id="button"
+                    jsf:action="#{DashboardForm.plugin.duplicateMetadataField}">
+                    <i class="fa fa-plus" />
+                    <f:setPropertyActionListener
+                        value="#{field}"
+                        target="#{DashboardForm.plugin.currentField}" />
+                </button>
+            </h:panelGroup>
 
         </h:panelGroup>
 
