--- a/plugin/src/main/resources/GUI/META-INF/resources/composites/person.xhtml
+++ b/plugin/src/main/resources/GUI/META-INF/resources/composites/person.xhtml
@@ -6,6 +6,7 @@
     xmlns:c="http://java.sun.com/jsp/jstl/core"
     xmlns:x="http://myfaces.apache.org/tomahawk"
     xmlns:pt="http://xmlns.jcp.org/jsf/passthrough"
+    xmlns:jsf="http://xmlns.jcp.org/jsf"
     xmlns:jsf="http://xmlns.jcp.org/jsf">
 
     <composite:interface>
@@ -37,6 +38,8 @@
         <composite:attribute name="mainClass" default="" />
         <composite:attribute name="subClass" default="" />
         <composite:attribute name="fieldStyle" default="" />
+        <composite:attribute name="displayDuplicateButton" default="false" />
+        <composite:attribute name="render" default="@form" />             
     </composite:interface>
 
     <composite:implementation>
@@ -62,7 +65,7 @@
                     styleClass="form-control #{cc.attrs.fieldStyle}"
                     value="#{cc.attrs.value}">
                     <f:ajax
-                        render="#{cc.attrs.identifier}"
+                        render="#{cc.attrs.render}"
                         execute="@this" />
                     <f:passThroughAttribute
                         name="placeholder"
@@ -75,7 +78,7 @@
                     styleClass="form-control #{cc.attrs.fieldStyle}"
                     value="#{cc.attrs.secondValue}">
                     <f:ajax
-                        render="#{cc.attrs.identifier}"
+                        render="#{cc.attrs.render}"
                         execute="@this" />
                     <f:passThroughAttribute
                         name="placeholder"
@@ -91,7 +94,7 @@
                         itemValue="null"
                         itemLabel="#{msgs.bitteAuswaehlen}" />
                     <f:ajax
-                        render="#{cc.attrs.identifier}"
+                        render="#{cc.attrs.render}"
                         execute="@this" />
                     <f:selectItems value="#{cc.attrs.selectItems}" />
                 </h:selectOneMenu>
@@ -107,7 +110,16 @@
                     rendered="#{NavigationForm.showHelp}"
                     value="#{cc.attrs.labelHelpText}" />
             </div>
-
+            <h:panelGroup rendered="#{cc.attrs.displayDuplicateButton}">
+                <button
+                    jsf:id="button"
+                    jsf:action="#{DashboardForm.plugin.duplicateMetadataField}">
+                    <i class="fa fa-plus" />
+                    <f:setPropertyActionListener
+                        value="#{field}"
+                        target="#{DashboardForm.plugin.currentField}" />
+                </button>
+            </h:panelGroup>
 
         </h:panelGroup>
 
