added option for read only output texts

--- a/plugin/src/main/resources/GUI/META-INF/resources/composites/field.xhtml
+++ b/plugin/src/main/resources/GUI/META-INF/resources/composites/field.xhtml
@@ -139,6 +139,12 @@
                     <f:selectItems value="#{cc.attrs.selectItems}" />
                 </h:selectOneRadio>
 
+                <h:outputText
+                    rendered="#{cc.attrs.fieldType=='output'}"
+                    styleClass="form-control #{cc.attrs.fieldStyle}"
+                    value="#{cc.attrs.value}">
+                </h:outputText>
+
                 <h:panelGroup
                     layout="block"
                     rendered="#{!cc.attrs.propertyValid}"
