Refactor frontend JS; refs #22594

--- a/plugin/src/main/resources/GUI/META-INF/resources/composites/modal.xhtml
+++ b/plugin/src/main/resources/GUI/META-INF/resources/composites/modal.xhtml
@@ -35,7 +35,8 @@
 
 		<script>
 
-			console.log("#{cc.attrs.modalId}")
+			// console.log("#{cc.attrs.modalId}")
+
 			var zlbModal = document.getElementById("#{cc.attrs.modalId}")
 			zlbModal.addEventListener('show.bs.modal', function (event) {
 				// Button that triggered the modal
