--- a/plugin/src/main/resources/GUI/META-INF/resources/composites/picklist.xhtml
+++ b/plugin/src/main/resources/GUI/META-INF/resources/composites/picklist.xhtml
@@ -60,19 +60,24 @@
         <h:panelGroup
             id="#{cc.attrs.identifier}"
             layout="block"
-            styleClass="form-group grid-row #{cc.attrs.mainClass}">
-            <label for="#{cc.attrs.identifier}_input">
+            styleClass="form grid-row #{cc.attrs.mainClass}">
+            <label
+                for="#{cc.attrs.identifier}_input"
+                class="zlb-label"
+                >
                 #{cc.attrs.labelText}
                 <h:panelGroup
                     styleClass="input-required"
                     rendered="#{cc.attrs.fieldRequired}">
                     <i class="fa fa-asterisk" />
                 </h:panelGroup>
+                <!--
                 <ui:include src="../uii/includes/icon-help.xhtml">
                     <ui:param
                         name="helpText"
                         value="#{cc.attrs.labelHelpText}" />
                 </ui:include>
+                -->
             </label>
             <div class="form-field #{cc.attrs.subClass}">
 
@@ -115,18 +120,27 @@
                     rendered="#{NavigationForm.showHelp}"
                     value="#{cc.attrs.labelHelpText}" />
             </div>
-            <h:panelGroup rendered="#{cc.attrs.displayDuplicateButton}">
-                <button
-                    jsf:id="button"
-                    jsf:action="#{DashboardForm.plugin.duplicateMetadataField}">
-                    <i class="fa fa-plus" />
-                    <f:setPropertyActionListener
-                        value="#{field}"
-                        target="#{DashboardForm.plugin.currentField}" />
-                </button>
-            </h:panelGroup>
 
+            <div class="form-icons">
+                <h:panelGroup rendered="#{cc.attrs.displayDuplicateButton}">
+                    <button
+                        jsf:id="button"
+                        jsf:action="#{DashboardForm.plugin.duplicateMetadataField}"
+                        class="form-icons__button form-icons__button--duplicate">
+                        <ui:include src="/uii/includes/icon-plus.xhtml" />
+                        <f:setPropertyActionListener
+                            value="#{field}"
+                            target="#{DashboardForm.plugin.currentField}" />
+                    </button>
 
+                </h:panelGroup>
+
+                  <ui:include src="/uii/includes/form_icons.xhtml">
+                    <ui:param name="duplicateElement" value="#{cc.attrs.inputDuplicate}" />
+                    <ui:param name="showHelpBtn" value="#{cc.attrs.showHelpBtn}" />
+                    <ui:param name="helpBody" value="#{cc.attrs.helpText}" />
+                  </ui:include>
+            </div>
 
 
         </h:panelGroup>
