Add aria labels; refs #22612

--- a/plugin/src/main/resources/GUI/META-INF/resources/composites/modal.xhtml
+++ b/plugin/src/main/resources/GUI/META-INF/resources/composites/modal.xhtml
@@ -14,7 +14,7 @@
 
 	<composite:implementation>
 
-	<div class="modal fade" tabindex="-1" id="#{cc.attrs.modalId}">
+	<div class="modal fade" tabindex="-1" id="#{cc.attrs.modalId}" aria-label="#{msgs.plugin_rest_usercreation_ariaLabel_helpModal}">
       <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
           <div class="modal-header">
