--- a/plugin/src/main/resources/GUI/META-INF/resources/composites/input.xhtml
+++ b/plugin/src/main/resources/GUI/META-INF/resources/composites/input.xhtml
@@ -18,6 +18,7 @@
 		<composite:attribute name="inputDuplicate" default="false" />
 		<composite:attribute name="inputAjax" />
 		<composite:attribute name="showHelpBtn" default="true" />
+		<composite:attribute name="helpTitle" default="default help title"/>
 		<composite:attribute name="helpText" default="default help text"/>
 	</composite:interface>
 
@@ -44,6 +45,7 @@
 			<ui:include src="/uii/includes/form_icons.xhtml">
 				<ui:param name="duplicateElement" value="#{cc.attrs.inputDuplicate}" />
 				<ui:param name="showHelpBtn" value="#{cc.attrs.showHelpBtn}" />
+				<ui:param name="helpTitle" value="#{cc.attrs.helpTitle}" />
 				<ui:param name="helpBody" value="#{cc.attrs.helpText}" />
 			</ui:include>
 
