Remove checkbox class to fix left indentation

--- a/plugin/src/main/resources/GUI/META-INF/resources/composites/field.xhtml
+++ b/plugin/src/main/resources/GUI/META-INF/resources/composites/field.xhtml
@@ -72,7 +72,7 @@
 
             <!-- Checkbox needs slightly different markup -->
             <ui:fragment rendered="#{cc.attrs.fieldType=='checkbox' or cc.attrs.fieldType=='combo'}" >
-            <div class="form form-check">
+            <div class="form">
                 <div class="form-check-wrapper">
 
                 <h:selectBooleanCheckbox
